--- a/index.html
+++ b/index.html
@@ -172,6 +172,74 @@
      </section>
 
 
+    <!-- Slider section -->
+     <section class="topSliderSection">
+        <div class="sliderChanging">
+            <buttno class="Tslider-prev sliderIndicate"><i class="fa-solid fa-chevron-left"></i></buttno>
+            <buttno class="Tslider-next sliderIndicate"><i class="fa-solid fa-chevron-right"></i></buttno>
+        </div>
+
+        <!-- Slider single -->
+        <div class="sliderResidency sicgle_slider z-indexing">
+            <img src="./assets/images/topSliderbg/img001-25-11.jpg" alt="">
+            <div class="bgBlackSlider"></div>
+            <div class="bgLightSlider"></div>
+            <div class="container">
+                <div class="slider_data">
+                    <h1 class="title">Residency Match </h1>
+                    <div class="borderDiv"></div>
+                    <div class="pDiv">
+                        <p class="sliderparagraph">Prepare from anywhere in the world with our team of successful physicians and experts.</p>
+                    </div>
+                    <a href="#" class="primary_btn">View details</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Slider single -->
+        <div class="sliderMentorship sicgle_slider">
+            <img src="./assets/images/topSliderbg/img001-8-11.jpg" alt="">
+            <div class="bgBlackSlider"></div>
+            <div class="bgLightSlider"></div>
+            <div class="container">
+                <div class="slider_data">
+                    <h1 class="title">Mentorship Plans</h1>
+                    <div class="borderDiv"></div>
+                    <div class="pDiv">
+                        <p class="sliderparagraph">Empowering tomorrow's medical leaders through personalized mentorship today.</p>
+                    </div>
+                    <a href="#" class="primary_btn">View details</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Slider single -->
+        <div class="sliderTuring sicgle_slider">
+            <img src="./assets/images/topSliderbg/img001-1-11.jpg" alt="">
+            <div class="bgBlackSlider"></div>
+            <div class="bgLightSlider"></div>
+            <div class="container">
+                <div class="slider_data">
+                    <h1 class="title">Tutoring</h1>
+                    <div class="borderDiv"></div>
+                    <div class="pDiv">
+                        <p class="sliderparagraph">Guiding you towards success in your medical journey.</p>
+                    </div>
+                    <a href="#" class="primary_btn">View details</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Roght side indicators -->
+        <div class="indicators">
+            <p class="indic active">Residency Match</p>
+            <p class="indic">Mentorship Plans</p>
+            <p class="indic">USMLE Tutoring</p>
+        </div>
+     </section>
+
+
+
     <!--========= All js references =========-->
     <!-- Bootstrap JS (CDN) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
