--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <!-- Bootstrap CSS (CDN) -->
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
+
+     <!-- Slick CSS -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"/>
+
+
     <!-- Custom css -->
      <link rel="stylesheet" href="./assets/css/style.css">
      <link rel="stylesheet" href="./assets/css/responsive.css">
@@ -632,6 +638,60 @@
      </section>
 
 
+    <!-- Cliecn testimonial section -->
+     <section class="clientTestmonialSection">
+        <div class="container">
+            <div class="clientTestmonialMain">
+                <h2 class="sub_title text-center mb-4 mb-sm-5">Client Testimonials</h2>
+                <div class="clientTestimonialInner testimonialSlider row">
+                    <!-- Testimonial Single -->
+                    <div class="clientTestimonialSingle px-4 px-sm-5">
+                        <div class="reviewerInfo">
+                            <div class="reviewerImg">
+                                <img src="./assets/images/testimonial/img001-1-11.jpg" alt="">
+                            </div>
+                            <div class="reviewerNamePosition">
+                                <h3 class="reviewerName">Name of reviewer</h3>
+                                <h4 class="reviewerPosition">Student</h4>
+                            </div>
+                        </div>
+                        <p class="paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis veritatis in natus ipsum id recusandae, voluptatibus repellendus fuga, ex animi saepe? Consequatur doloribus cumque</p>
+                    </div>
+
+                    <!-- Testimonial Single -->
+                    <div class="clientTestimonialSingle px-4 px-sm-5">
+                        <div class="reviewerInfo">
+                            <div class="reviewerImg">
+                                <img src="./assets/images/testimonial/tips-and-tricks.jpg" alt="">
+                            </div>
+                            <div class="reviewerNamePosition">
+                                <h3 class="reviewerName">Name of reviewer</h3>
+                                <h4 class="reviewerPosition">HR & admin</h4>
+                            </div>
+                        </div>
+                        <p class="paragraph">elit. Nobis veritatis in natus ipsum id recusandae, voluptatibus repellendus fuga, ex animi saepe? Consequatur doloribus cumque</p>
+                    </div>
+
+                    <!-- Testimonial Single -->
+                    <div class="clientTestimonialSingle px-4 px-sm-5">
+                        <div class="reviewerInfo">
+                            <div class="reviewerImg">
+                                <img src="./assets/images/testimonial/img001-1-11.jpg" alt="">
+                            </div>
+                            <div class="reviewerNamePosition">
+                                <h3 class="reviewerName">Name of reviewer</h3>
+                                <h4 class="reviewerPosition">Teacher</h4>
+                            </div>
+                        </div>
+                        <p class="paragraph"> amet consectetur adipisicing elit. Nobis veritatis in natus ipsum id recusandae, voluptatibus repellendus fuga, ex animi saepe? Consequatur doloribus cumque</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+     </section>
+
+
+
     <!-- Back to top -->
      <a href="#" class="backTop">
         <i class="fa-solid fa-arrow-up"></i>
@@ -646,6 +706,10 @@
 
     <!-- Calender js -->
      <script src="./assets/javaScript/jquery.bs.calendar.js"></script>
+
+    <!-- Slick JS -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+
 
     <!-- Custom javaScript -->
      <script src="./assets/javaScript/script.js"></script>
