Footer section design done

--- a/index.html
+++ b/index.html
@@ -772,6 +772,76 @@
      </section>
 
     <!-- Footer Section -->
+     <section class="footerSection">
+        <div class="container">
+            <div class="footerMain">
+
+                <!-- Footer Top -->
+                <div class="footertop">
+                    <div class="footerTleft">
+                        <img src="./assets/images/logo/Blue.png" alt="">
+                    </div>
+                    <div class="footerTright">
+                        <div class="footerRsingle">
+                            <i class="fa-solid fa-headphones"></i>
+                            <a href="tel: +1-917-524-8067" class="footerNumber">+1-917-524-8067</a>
+                        </div>
+                        <div class="footerRsingle">
+                            <i class="fa-solid fa-envelope"></i>
+                            <a href="mailto: Info@mibpromotions.com" class="footerNumber">Info@mibpromotions.com</a>
+                        </div>
+                        <div class="footerRsingle footerSocials">
+                            <div class="footerSocialInner">
+                                <a href="#" target="_blank" class="socialSingle"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="#" target="_blank" class="socialSingle"><i class="fa-brands fa-youtube"></i></a>
+                                <a href="#" target="_blank" class="socialSingle"><i class="fa-brands fa-instagram"></i></a>
+                                <a href="#" target="_blank" class="socialSingle"><i class="fa-brands fa-whatsapp"></i></a>
+                                <a href="#" target="_blank" class="socialSingle"><i class="fa-brands fa-x-twitter"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Footer middle -->
+                <div class="footerMiddle">
+                    <div class="fiiterMiddleSingle">
+                        <h4 class="footerTitle">Services</h4>
+                        <a href="#" class="footerLinks">Match Application Review & Strategy</a>
+                        <a href="#" class="footerLinks">Curriculum Vitae Review</a>
+                        <a href="#" class="footerLinks">Personal Statement Review</a>
+                        <a href="#" class="footerLinks">Interview Preparation</a>
+                        <a href="#" class="footerLinks">Additional Services</a>
+                        <a href="#" class="footerLinks">Mentorship Plans</a>
+                    </div>
+
+                    <div class="fiiterMiddleSingle">
+                        <h4 class="footerTitle">Quick Links</h4>
+                        <a href="#" class="footerLinks">Home</a>
+                        <a href="#" class="footerLinks">About Us</a>
+                        <a href="#" class="footerLinks">Services</a>
+                        <a href="#" class="footerLinks">Our Partners</a>
+                        <a href="#" class="footerLinks">Contact Us</a>
+                        <a href="#" class="footerLinks">FAQs</a>
+                        <a href="#" class="footerLinks">Sign Up</a>
+                    </div>
+
+                    <div class="fiiterMiddleSingle">
+                        <h4 class="footerTitle">Packages</h4>
+                        <a href="#" class="footerLinks">Basic Plan</a>
+                        <a href="#" class="footerLinks">Platinum Plan</a>
+                        <a href="#" class="footerLinks">Platinum Plus</a>
+                        <img src="./assets/images/singleSection/secure-stripe-payment.png" alt="">
+                    </div>
+
+                </div>
+
+                <!-- Footer bottom -->
+                <div class="footertop">
+                    <p class="footerBcontent">DESIGN BY <a href="https://www.linkedin.com/in/anower-dev/">Md Anower Hossan</a></p>
+                </div>
+            </div>
+        </div>
+     </section>
 
 
     <!-- Back to top -->
