About us page design done

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                     <div class="desktop_menubar d-none d-lg-block">
                         <ul class="desktopMlist">
                             <li class="desktop_mItem">
-                                <a href="" class="desktopMlink active">Home</a>
+                                <a href="index.html" class="desktopMlink active">Home</a>
                             </li>
                             <li class="desktop_mItem">
-                                <a href="" class="desktopMlink">About Us</a>
+                                <a href="about-us.html" class="desktopMlink">About Us</a>
                             </li>
                             <li class="desktop_mItem">
                                 <div class="desktoplink">
@@ -125,7 +125,7 @@
                             <a href="index.html" class="MobileMlink">Home</a>
                         </li>
                         <li class="Mobile_mItem">
-                            <a href="" class="MobileMlink">About Us</a>
+                            <a href="about-us.html" class="MobileMlink">About Us</a>
                         </li>
                         <li class="Mobile_mItem">
                             <div class="Mobilelink">
@@ -245,8 +245,6 @@
      </section>
 
     
-    <!-- Section devider -->
-    <section class="topDevider"></section>
     <!-- Success section -->
      <section class="successSection">
 
@@ -817,7 +815,7 @@
                     <div class="fiiterMiddleSingle">
                         <h4 class="footerTitle">Quick Links</h4>
                         <a href="#" class="footerLinks">Home</a>
-                        <a href="#" class="footerLinks">About Us</a>
+                        <a href="about-us.html" class="footerLinks">About Us</a>
                         <a href="#" class="footerLinks">Services</a>
                         <a href="#" class="footerLinks">Our Partners</a>
                         <a href="#" class="footerLinks">Contact Us</a>
