About us page design done

--- a/about-us.html
+++ b/about-us.html
@@ -525,7 +525,7 @@
 
                 <!-- Footer bottom -->
                 <div class="footertop">
-                    <p class="footerBcontent">DESIGN BY <a href="https://www.linkedin.com/in/anower-dev/">Md Anower Hossan</a></p>
+                    <p class="footerBcontent">© Residency Success – 2023. All rights reserved.</p>
                 </div>
             </div>
         </div>
