--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                 </ul>
                             </li>
                             <li class="desktop_mItem">
-                                <a href="" class="desktopMlink">Contact Us</a>
+                                <a href="contact.html" class="desktopMlink">Contact Us</a>
                             </li>
                         </ul>
                     </div>
@@ -169,7 +169,7 @@
                             </ul>
                         </li>
                         <li class="Mobile_mItem">
-                            <a href="" class="MobileMlink">Contact Us</a>
+                            <a href="contact.html" class="MobileMlink">Contact Us</a>
                         </li>
                     </ul>
                 </div>
@@ -818,7 +818,7 @@
                         <a href="about-us.html" class="footerLinks">About Us</a>
                         <a href="#" class="footerLinks">Services</a>
                         <a href="#" class="footerLinks">Our Partners</a>
-                        <a href="#" class="footerLinks">Contact Us</a>
+                        <a href="contact.html" class="footerLinks">Contact Us</a>
                         <a href="#" class="footerLinks">FAQs</a>
                         <a href="#" class="footerLinks">Sign Up</a>
                     </div>
