Sign up page design done

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         </ul>
                     </div>
                     <div class="desktop_rightSide">
-                        <a href="#" class="header_user"><i class="fa-regular fa-circle-user"></i></a>
+                        <a href="augth.html" class="header_user"><i class="fa-regular fa-circle-user"></i></a>
                         <a href="#" class="header_card"><i class="fa-solid fa-basket-shopping"></i></a>
                         <button class="Mobile_menuOpen d-lg-none" data-bs-target="#mobileOffCanvas" data-bs-toggle="offcanvas"><i class="fa-solid fa-bars"></i></button>
                     </div>
@@ -820,7 +820,7 @@
                         <a href="#" class="footerLinks">Our Partners</a>
                         <a href="contact.html" class="footerLinks">Contact Us</a>
                         <a href="#" class="footerLinks">FAQs</a>
-                        <a href="#" class="footerLinks">Sign Up</a>
+                        <a href="augth.html" class="footerLinks">Sign Up</a>
                     </div>
 
                     <div class="fiiterMiddleSingle">
