Mobile responsive done

--- a/augth.html
+++ b/augth.html
@@ -206,7 +206,7 @@
             <div class="augth_main row">
 
                 <!-- Login -->
-                <div class="aught_single col-12 col-lg-6 mt-3">
+                <div class="aught_single login col-12 col-lg-6 mt-3">
                     <div class="augth_form_inner">
                         <h3 class="sub_title4 mb-3 mb-lg-4">Login</h3>
 
@@ -337,7 +337,7 @@
 
                 <!-- Footer bottom -->
                 <div class="footertop">
-                    <p class="footerBcontent">© Residency Success – 2023. All rights reserved.</p>
+                    <p class="footerBcontent">NOVA DESIGNS</p>
                 </div>
             </div>
         </div>
@@ -351,30 +351,24 @@
 
     <!--========= All js references =========-->
     <!-- Bootstrap JS (CDN) -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-<!-- jQuery Full Version -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- jQuery Full Version -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-<!-- Choices.js JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
+    <!-- Calender js -->
+    <script src="./assets/javaScript/jquery.bs.calendar.js"></script>
 
-<!-- Custom JavaScript -->
-<script src="./assets/javaScript/script.js"></script>
+    <!-- Slick JS -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
 
-<!-- Choices.js Initialization -->
-<script>
-    $(document).ready(function () {
-        // Initialize Choices.js on the select box
-        var countrySearch = new Choices('#signupCountry', {
-            searchEnabled: true, // Enable live search
-            itemSelectText: '', // Remove the default 'Press to select' text
-            placeholderValue: 'Select a country...', // Add a placeholder
-        });
+    <!-- Choices.js JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
 
-        // Debugging to check if Choices.js is initialized properly
-        console.log(countrySearch); // Should print the Choices instance to the console if successful
-    });
-</script>
+    <!-- Custom JavaScript -->
+    <script src="./assets/javaScript/script.js"></script>
+
+    <!-- Extra js -->
+    <script src="./assets/javaScript/extra.js"></script>
 </body>
 </html>
