product details done

--- a/augth.html
+++ b/augth.html
@@ -72,7 +72,7 @@
                                         <!-- Submenu Inner -->
                                         <ul class="desSubMenu2">
                                             <li class="desk_subItem2">
-                                                <a href="#" class="deskSubLink2 subLinkD">Match Application Review & Strategy</a>
+                                                <a href="match-application.html" class="deskSubLink2 subLinkD">Match Application Review & Strategy</a>
                                             </li>
                                             <li class="desk_subItem2">
                                                 <a href="#" class="deskSubLink2 subLinkD">Curriculum Vitae Review</a>
@@ -147,7 +147,7 @@
                                     <!-- Submenu Inner -->
                                     <ul class="MobileSubMenu2">
                                         <li class="Mobile_subItem2">
-                                            <a href="#" class="MobileSubLink2">Match Application Review & Strategy</a>
+                                            <a href="match-application.html" class="MobileSubLink2">Match Application Review & Strategy</a>
                                         </li>
                                         <li class="Mobile_subItem2">
                                             <a href="#" class="MobileSubLink2">Curriculum Vitae Review</a>
@@ -306,7 +306,7 @@
                 <div class="footerMiddle">
                     <div class="fiiterMiddleSingle">
                         <h4 class="footerTitle">Services</h4>
-                        <a href="#" class="footerLinks">Match Application Review & Strategy</a>
+                        <a href="match-application.html" class="footerLinks">Match Application Review & Strategy</a>
                         <a href="#" class="footerLinks">Curriculum Vitae Review</a>
                         <a href="#" class="footerLinks">Personal Statement Review</a>
                         <a href="#" class="footerLinks">Interview Preparation</a>
