More section done

--- a/copy.html
+++ b/copy.html
@@ -89,10 +89,10 @@
                                         </ul>
                                     </li>
                                     <li class="deskSubItem">
-                                        <a href="#" class="desktopSMlink subLinkD">Mentorship Plans</a>
+                                        <a href="mentorship.html" class="desktopSMlink subLinkD">Mentorship Plans</a>
                                     </li>
                                     <li class="deskSubItem">
-                                        <a href="#" class="desktopSMlink subLinkD">USMLE Tutoring</a>
+                                        <a href="match-application.html" class="desktopSMlink subLinkD">USMLE Tutoring</a>
                                     </li>
                                 </ul>
                             </li>
@@ -164,10 +164,10 @@
                                     </ul>
                                 </li>
                                 <li class="MobileSubItem">
-                                    <a href="#" class="MobileSMlink">Mentorship Plans</a>
+                                    <a href="mentorship.html" class="MobileSMlink">Mentorship Plans</a>
                                 </li>
                                 <li class="MobileSubItem">
-                                    <a href="#" class="MobileSMlink">USMLE Tutoring</a>
+                                    <a href="match-application.html" class="MobileSMlink">USMLE Tutoring</a>
                                 </li>
                             </ul>
                         </li>
@@ -186,7 +186,6 @@
 
         <!-- Slider single -->
         <div class="sliderResidency sicgle_slider z-indexing">
-            <img src="./assets/images/TopSliderInner/contact.jpg" alt="">
             <div class="bgLightSlider singlepage"></div>
             <div class="container">
                 <div class="slider_data singlepage">
@@ -236,11 +235,11 @@
                     <div class="fiiterMiddleSingle">
                         <h4 class="footerTitle">Services</h4>
                         <a href="match-application.html" class="footerLinks">Match Application Review & Strategy</a>
-                        <a href="#" class="footerLinks">Curriculum Vitae Review</a>
-                        <a href="#" class="footerLinks">Personal Statement Review</a>
-                        <a href="#" class="footerLinks">Interview Preparation</a>
-                        <a href="#" class="footerLinks">Additional Services</a>
-                        <a href="#" class="footerLinks">Mentorship Plans</a>
+                        <a href="match-application.html" class="footerLinks">Curriculum Vitae Review</a>
+                        <a href="match-application.html" class="footerLinks">Personal Statement Review</a>
+                        <a href="match-application.html" class="footerLinks">Interview Preparation</a>
+                        <a href="match-application.html" class="footerLinks">Additional Services</a>
+                        <a href="mentorship.html" class="footerLinks">Mentorship Plans</a>
                     </div>
 
                     <div class="fiiterMiddleSingle">
