More section done

--- a/contact.html
+++ b/contact.html
@@ -347,7 +347,7 @@
                         <h4 class="footerTitle">Quick Links</h4>
                         <a href="#" class="footerLinks">Home</a>
                         <a href="about-us.html" class="footerLinks">About Us</a>
-                        <a href="#" class="footerLinks">Services</a>
+                        <a href="services.html" class="footerLinks">Services</a>
                         <a href="#" class="footerLinks">Our Partners</a>
                         <a href="contact.html" class="footerLinks">Contact Us</a>
                         <a href="#" class="footerLinks">FAQs</a>
@@ -356,9 +356,9 @@
 
                     <div class="fiiterMiddleSingle">
                         <h4 class="footerTitle">Packages</h4>
-                        <a href="#" class="footerLinks">Basic Plan</a>
-                        <a href="#" class="footerLinks">Platinum Plan</a>
-                        <a href="#" class="footerLinks">Platinum Plus</a>
+                        <a href="mentorship.html" class="footerLinks">Basic Plan</a>
+                        <a href="mentorship.html" class="footerLinks">Platinum Plan</a>
+                        <a href="mentorship.html" class="footerLinks">Platinum Plus</a>
                         <img src="./assets/images/singleSection/secure-stripe-payment.png" alt="">
                     </div>
 
