--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <div class="pDiv">
                         <p class="sliderparagraph">Prepare from anywhere in the world with our team of successful physicians and experts.</p>
                     </div>
-                    <a href="#" class="primary_btn">View details</a>
+                    <a href="match-application.html" class="primary_btn">View details</a>
                 </div>
             </div>
         </div>
@@ -217,7 +217,7 @@
                     <div class="pDiv">
                         <p class="sliderparagraph">Empowering tomorrow's medical leaders through personalized mentorship today.</p>
                     </div>
-                    <a href="#" class="primary_btn">View details</a>
+                    <a href="mentorship.html" class="primary_btn">View details</a>
                 </div>
             </div>
         </div>
@@ -234,7 +234,7 @@
                     <div class="pDiv">
                         <p class="sliderparagraph">Guiding you towards success in your medical journey.</p>
                     </div>
-                    <a href="#" class="primary_btn">View details</a>
+                    <a href="match-application.html" class="primary_btn">View details</a>
                 </div>
             </div>
         </div>
@@ -819,7 +819,7 @@
                         <h4 class="footerTitle">Quick Links</h4>
                         <a href="#" class="footerLinks">Home</a>
                         <a href="about-us.html" class="footerLinks">About Us</a>
-                        <a href="#" class="footerLinks">Services</a>
+                        <a href="services.html" class="footerLinks">Services</a>
                         <a href="#" class="footerLinks">Our Partners</a>
                         <a href="contact.html" class="footerLinks">Contact Us</a>
                         <a href="#" class="footerLinks">FAQs</a>
@@ -828,9 +828,9 @@
 
                     <div class="fiiterMiddleSingle">
                         <h4 class="footerTitle">Packages</h4>
-                        <a href="#" class="footerLinks">Basic Plan</a>
-                        <a href="#" class="footerLinks">Platinum Plan</a>
-                        <a href="#" class="footerLinks">Platinum Plus</a>
+                        <a href="mentorship.html" class="footerLinks">Basic Plan</a>
+                        <a href="mentorship.html" class="footerLinks">Platinum Plan</a>
+                        <a href="mentorship.html" class="footerLinks">Platinum Plus</a>
                         <img src="./assets/images/singleSection/secure-stripe-payment.png" alt="">
                     </div>
 
