--- a/about-us.html
+++ b/about-us.html
@@ -511,7 +511,7 @@
                         <a href="services.html" class="footerLinks">Services</a>
                         <a href="#" class="footerLinks">Our Partners</a>
                         <a href="contact.html" class="footerLinks">Contact Us</a>
-                        <a href="#" class="footerLinks">FAQs</a>
+                        <a href="faqs.html" class="footerLinks">FAQs</a>
                         <a href="augth.html" class="footerLinks">Sign Up</a>
                     </div>
 
