partner page done

--- a/augth.html
+++ b/augth.html
@@ -315,10 +315,10 @@
 
                     <div class="fiiterMiddleSingle">
                         <h4 class="footerTitle">Quick Links</h4>
-                        <a href="#" class="footerLinks">Home</a>
+                        <a href="index.html" class="footerLinks">Home</a>
                         <a href="about-us.html" class="footerLinks">About Us</a>
                         <a href="services.html" class="footerLinks">Services</a>
-                        <a href="#" class="footerLinks">Our Partners</a>
+                        <a href="partners.html" class="footerLinks">Our Partners</a>
                         <a href="contact.html" class="footerLinks">Contact Us</a>
                         <a href="faqs.html" class="footerLinks">FAQs</a>
                         <a href="augth.html" class="footerLinks">Sign Up</a>
