--- a/services.html
+++ b/services.html
@@ -567,7 +567,7 @@
                         <a href="#" class="footerLinks">Home</a>
                         <a href="about-us.html" class="footerLinks">About Us</a>
                         <a href="services.html" class="footerLinks">Services</a>
-                        <a href="#" class="footerLinks">Our Partners</a>
+                        <a href="partners.html" class="footerLinks">Our Partners</a>
                         <a href="contact.html" class="footerLinks">Contact Us</a>
                         <a href="faqs.html" class="footerLinks">FAQs</a>
                         <a href="augth.html" class="footerLinks">Sign Up</a>
