--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     </div>
                     <div class="desktop_rightSide">
                         <a href="augth.html" class="header_user"><i class="fa-regular fa-circle-user"></i></a>
-                        <a href="#" class="header_card"><i class="fa-solid fa-basket-shopping"></i></a>
+                        <a href="cart.html" class="header_card"><i class="fa-solid fa-basket-shopping"></i></a>
                         <button class="Mobile_menuOpen d-lg-none" data-bs-target="#mobileOffCanvas" data-bs-toggle="offcanvas"><i class="fa-solid fa-bars"></i></button>
                     </div>
                 </div>
@@ -293,7 +293,7 @@
 
     
     <!-- Services section -->
-    <section class="services_section sectionPadding">
+    <section class="services_section sectionPadding" id="services">
         <div class="container">
             <div class="service_main">
                 <h2 class="sub_title text-center mb-4 mb-lg-5">Our Services</h2>
