--- a/partners.html
+++ b/partners.html
@@ -103,7 +103,7 @@
                     </div>
                     <div class="desktop_rightSide">
                         <a href="augth.html" class="header_user"><i class="fa-regular fa-circle-user"></i></a>
-                        <a href="#" class="header_card"><i class="fa-solid fa-basket-shopping"></i></a>
+                        <a href="cart.html" class="header_card"><i class="fa-solid fa-basket-shopping"></i></a>
                         <button class="Mobile_menuOpen d-lg-none" data-bs-target="#mobileOffCanvas" data-bs-toggle="offcanvas"><i class="fa-solid fa-bars"></i></button>
                     </div>
                 </div>
@@ -233,7 +233,7 @@
     <section class="partner_valuSection">
         <div class="container">
 
-            <h2 class="sub_title text-center mb-2 mb-lg-3">Our Valued Partners</h2>
+            <h2 class="sub_title text-center mb-3 mb-lg-4">Our Valued Partners</h2>
             <div class="partner_valueMain row">
                 <div class="col-lg-4">
                     <div class="partner_single text-center p-3 my-auto">
