--- a/services.html
+++ b/services.html
@@ -103,7 +103,7 @@
                     </div>
                     <div class="desktop_rightSide">
                         <a href="augth.html" class="header_user"><i class="fa-regular fa-circle-user"></i></a>
-                        <a href="#" class="header_card"><i class="fa-solid fa-basket-shopping"></i></a>
+                        <a href="cart.html" class="header_card"><i class="fa-solid fa-basket-shopping"></i></a>
                         <button class="Mobile_menuOpen d-lg-none" data-bs-target="#mobileOffCanvas" data-bs-toggle="offcanvas"><i class="fa-solid fa-bars"></i></button>
                     </div>
                 </div>
@@ -564,7 +564,7 @@
 
                     <div class="fiiterMiddleSingle">
                         <h4 class="footerTitle">Quick Links</h4>
-                        <a href="#" class="footerLinks">Home</a>
+                        <a href="index.html" class="footerLinks">Home</a>
                         <a href="about-us.html" class="footerLinks">About Us</a>
                         <a href="services.html" class="footerLinks">Services</a>
                         <a href="partners.html" class="footerLinks">Our Partners</a>
