--- a/faqs.html
+++ b/faqs.html
@@ -103,7 +103,7 @@
                     </div>
                     <div class="desktop_rightSide">
                         <a href="augth.html" class="header_user"><i class="fa-regular fa-circle-user"></i></a>
-                        <a href="#" class="header_card"><i class="fa-solid fa-basket-shopping"></i></a>
+                        <a href="cart.html" class="header_card"><i class="fa-solid fa-basket-shopping"></i></a>
                         <button class="Mobile_menuOpen d-lg-none" data-bs-target="#mobileOffCanvas" data-bs-toggle="offcanvas"><i class="fa-solid fa-bars"></i></button>
                     </div>
                 </div>
