checkout page done

--- a/cart.html
+++ b/cart.html
@@ -220,7 +220,7 @@
                                                 <i class="fa-solid fa-xmark"></i>
                                             </button>
                                             <img src="./assets/images/servises/51-gettyimages.jpg" alt="">
-                                            <a href="index.html#services" class="cart_product_title">Match Application Review & Strategy</a>
+                                            <a href="match-application.html" class="cart_product_title">Match Application Review & Strategy</a>
                                         </div>
                                     </td>
                                     <td class="py-2 py-lg-3">$300</td>
