--- a/faqs.html
+++ b/faqs.html
@@ -495,5 +495,6 @@
 
     <!-- Extra js -->
     <script src="./assets/javaScript/extra.js"></script>
+    <script src="./assets/javaScript/modal.js"></script>
 </body>
 </html>
