--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
                                         </button>
                                     </div>
                                     <div class="cProductData">
-                                        <a href="#" class="CPtitle">MATCH Application Review & Strategy</a>
+                                        <a href="match-application.html" class="CPtitle">MATCH Application Review & Strategy</a>
                                         <h6 class="CPprice">$18.00</h6>
                                     </div>
                                 </div>
@@ -521,10 +521,10 @@
                                 <span>$18.00</span>
                             </div>
                             <div class="sCardlinks">
-                                <a href="#" class="sCardContinue">Continue shoping</a>
-                                <a href="#" class="sCardView">View cart</a>
+                                <a href="index.html#services" class="sCardContinue">Continue shoping</a>
+                                <a href="cart.html" class="sCardView">View cart</a>
                             </div>
-                            <a href="#" class="sCardCheckout">Checkout</a>
+                            <a href="checkout.html" class="sCardCheckout">Checkout</a>
                         </div>
                     </div>
                 </div>
@@ -871,5 +871,6 @@
 
     <!-- Extra js -->
     <script src="./assets/javaScript/extra.js"></script>
+    <script src="./assets/javaScript/modal.js"></script>
 </body>
 </html>
