--- a/match-application.html
+++ b/match-application.html
@@ -574,5 +574,6 @@
 
     <!-- Extra js -->
     <script src="./assets/javaScript/extra.js"></script>
+    <script src="./assets/javaScript/modal.js"></script>
 </body>
 </html>
