--- a/mentorship.html
+++ b/mentorship.html
@@ -771,5 +771,6 @@
 
     <!-- Extra js -->
     <script src="./assets/javaScript/extra.js"></script>
+    <script src="./assets/javaScript/modal.js"></script>
 </body>
 </html>
