password reset page done

--- a/augth.html
+++ b/augth.html
@@ -221,7 +221,7 @@
                         <input type="checkbox" name="#" id="loginRemember">
                         <label for="loginRemember" class="rememberLabel my-3 my-lg-4">Remember me</label>
 
-                        <a href="password-reset.html" class="forgotLink">Lost your password?</a>
+                        <a href="forgot-password.html" class="forgotLink">Lost your password?</a>
                     </div>
                 </div>
 
