--- a/forgot-password.html
+++ b/forgot-password.html
@@ -182,14 +182,14 @@
 
 
     <!-- Slider section -->
-     <section class="topSliderSection singlepage">
+     <section class="topSliderSection singlepage passwordResetSlider">
 
         <!-- Slider single -->
         <div class="sliderResidency sicgle_slider z-indexing">
             <div class="bgLightSlider singlepage"></div>
             <div class="container">
                 <div class="slider_data singlepage">
-                    <h1 class="title">Contact</h1>
+                    <h1 class="title">Lost your password?</h1>
                     <div class="borderDiv"></div>
                 </div>
             </div>
@@ -197,10 +197,25 @@
 
      </section>
 
-    
+    <!-- password reset section -->
+    <section class="passwordresetsection">
+        <div class="container">
+            <div class="passwordresetmain">
+                <form class="password_up">
+                    <p class="paragraph mb-3 mb-lg-4">Lost your password? Please enter your username or email address. You will receive a link to create a new password via email.</p>
+
+                    <label for="passwordEmail">Username or email *</label>
+                    <input type="text" name="#" id="passwordEmail" required>
+
+                    <button class="pResetBtn primary_btn mt-3 mt-lg-4">Submit</button>
+                </form>
+                <p class="passResetAmassage paragraph">A password reset email has been sent to the email address on file for your account, but may take several minutes to show up in your inbox. Please wait at least 10 minutes before attempting another reset.</p>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer Section -->
-     <section class="footerSection">
+     <section class="footerSection position-relative">
         <div class="container">
             <div class="footerMain">
 
