--- a/password-reset.html
+++ b/password-reset.html
@@ -202,14 +202,22 @@
         <div class="container">
             <div class="passwordresetmain">
                 <form class="password_up">
-                    <p class="paragraph mb-3 mb-lg-4">Lost your password? Please enter your username or email address. You will receive a link to create a new password via email.</p>
+                    <p class="paragraph mb-3 mb-lg-4">Rest your deisred password</p>
 
-                    <label for="passwordEmail">Username or email *</label>
-                    <input type="text" name="#" id="passwordEmail" required>
+                    <div class="newOldPassword">
+                        <div class="newOldPassSingle">
+                            <label for="passwordEmail">New Password*</label>
+                            <input type="text" name="#" id="passwordEmail" required>
+                        </div>
+                        <div class="newOldPassSingle">
+                            <label for="passwordEmail">New Password*</label>
+                            <input type="text" name="#" id="passwordEmail" required>
+                        </div>
+                    </div>
 
                     <button class="pResetBtn primary_btn mt-3 mt-lg-4">Reset password</button>
                 </form>
-                <p class="passResetAmassage paragraph">A password reset email has been sent to the email address on file for your account, but may take several minutes to show up in your inbox. Please wait at least 10 minutes before attempting another reset.</p>
+                <p class="passResetAmassage paragraph text-primary text-center">Password Reset Successfull</p>
             </div>
         </div>
     </section>
