checkout page done

--- a/match-application.html
+++ b/match-application.html
@@ -218,7 +218,7 @@
                                     <span class="pSmallHihlight">Two Hour</span>
                                 </div>
                             </div>
-                            <a href="#" class="pDetails_link primary_btn">BUY NOW</a>
+                            <a href="cart.html" class="pDetails_link primary_btn">BUY NOW</a>
                         </div>
                     </div>
                 </div>
@@ -541,7 +541,7 @@
 
                 <!-- Footer bottom -->
                 <div class="footertop">
-                    <p class="footerBcontent">NOVA DESIGNS</p>
+                    <p class="footerBcontent">DESIGN AND DEVELOPED BY  <a href="#">NOVA DESIGNS</a></p>
                 </div>
             </div>
         </div>
