--- a/mentorship.html
+++ b/mentorship.html
@@ -254,7 +254,7 @@
                                     </span>
                                 </li>
                             </ul>
-                            <a href="#" class="primary_btn planSubmit">Buy Now</a>
+                            <a href="cart.html" class="primary_btn planSubmit">Buy Now</a>
                         </div>
                     </div>
 
@@ -330,13 +330,13 @@
                                 </li>
                             </ul>
 
-                            <a href="#" class="primary_btn planSubmit">Buy Now</a>
+                            <a href="cart.html" class="primary_btn planSubmit">Buy Now</a>
                         </div>
                     </div>
 
                     <!-- Mentor Single -->
                     <div class="mentor_choose_single advence">
-                        <h4 class="mentor_single_header">Platinum Plan</h4>
+                        <h4 class="mentor_single_header">Platinum Plus</h4>
                         <div class="mentor_single_body">
                             <div class="mentorship_price">
                                 <i class="fa-solid fa-dollar"></i>
@@ -422,7 +422,7 @@
                                 </li>
                             </ul>
 
-                            <a href="#" class="primary_btn planSubmit">Buy Now</a>
+                            <a href="cart.html" class="primary_btn planSubmit">Buy Now</a>
                         </div>
                     </div>
                 </div>
@@ -738,7 +738,7 @@
 
                 <!-- Footer bottom -->
                 <div class="footertop">
-                    <p class="footerBcontent">NOVA DESIGNS</p>
+                    <p class="footerBcontent">DESIGN AND DEVELOPED BY  <a href="#">NOVA DESIGNS</a></p>
                 </div>
             </div>
         </div>
