--- a/contact.html
+++ b/contact.html
@@ -366,7 +366,7 @@
 
                 <!-- Footer bottom -->
                 <div class="footertop">
-                    <p class="footerBcontent">NOVA DESIGNS</p>
+                    <p class="footerBcontent">DESIGN AND DEVELOPED BY  <a href="#">NOVA DESIGNS</a></p>
                 </div>
             </div>
         </div>
